Finished unit testing for configuration