@@ -3,14 +3,13 @@ package net.sf.juoserver.configuration;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junitpioneer.jupiter.SetEnvironmentVariable;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static uk.org.webcompere.systemstubs.SystemStubs.*;
 
 
 class ConfigurationFactoryTest {
@@ -38,32 +37,33 @@ class ConfigurationFactoryTest {
     public void shouldUseClasspathInfo() {
         var configuration = ConfigurationFactory.newInstance().newConfiguration();
 
-        assertEquals(9999, configuration.getStats().getLifeLimit());
+        assertEquals(9999, configuration.getStats().getMaxHitPoints());
     }
 
     @Test
     public void shouldUseExternalYamlInfo() throws IOException {
-        Files.write(externalYaml, "stats:\n  lifeLimit: 9090".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(externalYaml, "stats:\n  maxHitPoints: 9090");
 
         var configuration = ConfigurationFactory.newInstance().newConfiguration();
 
-        assertEquals(9090, configuration.getStats().getLifeLimit());
+        assertEquals(9090, configuration.getStats().getMaxHitPoints());
     }
 
     @Test
     public void shouldUseExternalProperty() throws IOException {
-        Files.write(externalProperty, "stats.lifeLimit=8080".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(externalProperty, "stats.maxHitPoints=8080");
 
         var configuration = ConfigurationFactory.newInstance().newConfiguration();
 
-        assertEquals(8080, configuration.getStats().getLifeLimit());
+        assertEquals(8080, configuration.getStats().getMaxHitPoints());
     }
 
     @Test
-    @SetEnvironmentVariable(key = "stats.lifeLimit", value = "7070")
-    public void shouldUseEnvVars() {
-        var configuration = ConfigurationFactory.newInstance().newConfiguration();
-
-        assertEquals(7070, configuration.getStats().getLifeLimit());
+    public void shouldUseEnvVars() throws Exception {
+        withEnvironmentVariable("stats.maxHitPoints", "7070")
+                .execute(()->{
+                    var configuration = ConfigurationFactory.newInstance().newConfiguration();
+                    assertEquals(7070, configuration.getStats().getMaxHitPoints());
+                });
     }
 }
